autumn/tests/compile-fail/path_helper_wrong_arity.stderr
error[E0061]: this function takes 1 argument but 2 arguments were supplied
  --> tests/compile-fail/path_helper_wrong_arity.rs:11:16
   |
11 |     let _url = __autumn_path_show_post(42i64, 99i64);
   |                ^^^^^^^^^^^^^^^^^^^^^^^        ----- unexpected argument #2 of type `i64`
   |
note: function defined here
  --> tests/compile-fail/path_helper_wrong_arity.rs:4:1
   |
 4 | #[get("/posts/{id}")]
   | ^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)
help: remove the extra argument
   |
11 -     let _url = __autumn_path_show_post(42i64, 99i64);
11 +     let _url = __autumn_path_show_post(42i64);
   |
